updates to week 4 lecture materials; fixed broken link to 4.1 template

--- a/assignments.qmd
+++ b/assignments.qmd
@@ -42,7 +42,7 @@ End-of-class surveys (EOCs) will become available at the end of each class (Mond
 | [EOC (week 1)](https://forms.gle/RGd3qzQR4ue9HvfR8)                 | Mon 01/06/2025 | Mon 01/06/2025 |
 | [EOC (week 2)](https://forms.gle/XMnf7cxrxmbcAA5k6)                 | Mon 01/13/2025 | Mon 01/13/2025 |
 | *No lecture or EOC (week 3)* | *NA*           | *NA*           |
-| EOC (week 4)                 | Mon 01/27/2025 | Mon 01/27/2025 |
+| [EOC (week 4)](https://forms.gle/nt5R8YBh8VHqdmpE8)                 | Mon 01/27/2025 | Mon 01/27/2025 |
 | EOC (week 5)                 | Mon 02/03/2025 | Mon 02/03/2025 |
 | EOC (week 6)                 | Mon 02/10/2025 | Mon 02/10/2025 |
 | *No lecture or EOC (week 7)* | *NA*           | *NA*           |
