--- a/course-materials/keys/KEY-lecture4.1-rankings.qmd
+++ b/course-materials/keys/KEY-lecture4.1-rankings.qmd
@@ -9,7 +9,7 @@ editor_options:
 ---
 
 ::: {.callout-note}
-This template follows [lecture 4.1 slides](../lecture-slides/lecture4.1-rankings-slides.qmd){target="_blank"}. Please be sure to cross-reference the slides, which contain important information and additional context!
+This template follows [lecture 4.1 slides](../lecture-slides/lecture4.1-amounts-slides.qmd){target="_blank"}. Please be sure to cross-reference the slides, which contain important information and additional context!
 :::
 
 ## Setup
@@ -27,6 +27,7 @@ Data are downloaded directly from the [tidytuesday GitHub repository](https://gi
 
 #..........................load packages.........................
 library(tidyverse)
+library(scales)
 
 #..........................import data...........................
 jobs <- read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-03-05/jobs_gender.csv")
@@ -216,7 +217,7 @@ ggplot(heatmap_order, aes(x = year, y = occupation, fill = total_earnings)) +
   geom_tile() +
   labs(fill = "Total earnings") +
   coord_fixed() + 
-  scale_fill_viridis_c(labels = scales::label_currency(scale = 0.001, suffix = "K")) +
+  scale_fill_viridis_c(labels = scales::label_currency(scale = 0.001, suffix = "k")) +
   scale_y_discrete(labels = scales::label_wrap(30)) +
   guides(fill = guide_colorbar(barwidth = 15, barheight = 0.75, title.position = "top")) +
   theme_minimal() +
@@ -256,7 +257,7 @@ f50 <- jobs_clean |>
 
 #.......combine dfs & relevel factors (for plotting order).......
 subset_jobs <- rbind(f75, m75, f50) |> 
-  mutate(group_label = fct_relevel(group_label, 
+  mutate(group_label = fct_relevel(.f = group_label, 
                                    "Occupations that are 75%+ female", 
                                    "Occupations that are 45-55% female", 
                                    "Occupations that are 75%+ male"),
@@ -287,6 +288,5 @@ ggplot(subset_jobs) +
   
   # axis breaks & $ labels ----
   scale_x_continuous(labels = scales::label_dollar(scale = 0.001, suffix = "k"),
-                     breaks = c(25000, 50000, 75000, 100000, 125000))
+                     breaks = c(25000, 50000, 75000, 100000))
 ```
-
