--- a/course-materials/week4.qmd
+++ b/course-materials/week4.qmd
@@ -38,7 +38,7 @@ install.packages("ggdensity") # {ggplot2} extension providing more interpretable
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lecture slides   | {{< fa file-code title="A code file" >}} Code-along template | {{< fa key title="A key" >}} Code-along key |
 |------------------------------------------------------------------------------------------|--------------------------------------------------------------|---------------------------------------------------|
-| [Lecture 4.1: visualizing amounts / rankings](lecture-slides/lecture4.1-amounts-slides.qmd){target="_blank"}  | [4.1 template](https://github.com/EDS-240-Data-Viz/code-along-templates/blob/main/week4/TEMPLATE-lecture4.1-rankings.qmd){target="_blank"} | [4.1 key](keys/KEY-lecture4.1-rankings.qmd){target="_blank"} |
+| [Lecture 4.1: visualizing amounts / rankings](lecture-slides/lecture4.1-amounts-slides.qmd){target="_blank"}  | [4.1 template](https://github.com/EDS-240-Data-Viz/code-along-templates/blob/main/week4/TEMPLATE-lecture4.1-amounts.qmd){target="_blank"} | [4.1 key](keys/KEY-lecture4.1-amounts.qmd){target="_blank"} |
 | [Lecture 4.2: visualizing numeric relationships](lecture-slides/lecture4.2-relationships-slides.qmd){target="_blank"}  | [4.2 template](https://github.com/EDS-240-Data-Viz/code-along-templates/blob/main/week4/TEMPLATE-lecture4.2-relationships.qmd){target="_blank"} | [4.2 key](keys/KEY-lecture4.2-relationships.qmd){target="_blank"} |
 : {.hover .bordered tbl-colwidths="[50,25,25]"} 
 
@@ -59,7 +59,7 @@ Add a new blank file to your class repo at the following location: `EDS-240-clas
 
 | Assignment Type | Assignment Title        | Date Assigned  | Date Due                   |
 |-----------------|-------------------------|----------------|----------------------------|
-| EOC             | EOC (week 4)            | Mon 01/27/2025 | Mon 01/27/2025, 11:55pm PT |
+| EOC             | [EOC (week 4)](https://forms.gle/nt5R8YBh8VHqdmpE8)            | Mon 01/27/2025 | Mon 01/27/2025, 11:55pm PT |
 | HW              | [Homework Assignment #2](assignments/HW2.qmd)  | Tue 01/21/2025 | Tue 02/04/2025, 11:59pm PT |
 : {.hover .bordered tbl-colwidths="[20,30,20,30]"}
 
