--- a/course-materials/week5.qmd
+++ b/course-materials/week5.qmd
@@ -36,6 +36,9 @@ install.packages("tigris") # for downloading and using Census TIGER/Line shapefi
 - [County-level precipitation data (Feb 2019 - Jan 2024) for the contiguous U.S](https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/pcp/202401/60/value){target="_blank"}, made available by [NOAA National Centers for Environmental Information (NCEI)](https://www.ncei.noaa.gov/){target="_blank"} (the download buttons are located just beneath the rendered map -- **choose the CSV option**)
   - rename the data file as `county-feb19-jan24-precip.csv` and save it to your class repo at the file path: `EDS-240-class-examples/week5/data/county-feb19-jan24-precip.csv`
   
+<!-- - [County-level precipitation data (Jan 2020 - Dec 2024) for the contiguous U.S](https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/pcp/202412/60/value){target="_blank"}, made available by [NOAA National Centers for Environmental Information (NCEI)](https://www.ncei.noaa.gov/){target="_blank"} (the download buttons are located just beneath the rendered map -- **choose the CSV option**) -->
+<!--   - rename the data file as `county-jan20-dec24-precip.csv` and save it to your class repo at the file path: `EDS-240-class-examples/week5/data/county-jan20-dec24-precip.csv` -->
+
 ### C. Download .qmd templates & review data wrangling code
 
 1. Download all necessary templates (links in the table below) and save them to a `EDS-240-data-viz-examples/week5/` folder.
