udpated guide_colourbar > guide_colorbar in lecture 4.2 for consistency (both work though)

--- a/course-materials/lecture-slides/lecture4.2-relationships-slides.qmd
+++ b/course-materials/lecture-slides/lecture4.2-relationships-slides.qmd
@@ -778,7 +778,7 @@ Check out the `guides()` function for tweaking the appearance of your legend (e.
 ggplot(stream_chem_data, aes(x = SO4, y = pH)) +
   geom_hex() +
   scale_fill_viridis_c() + 
-  guides(fill = guide_colourbar(title = "Count", 
+  guides(fill = guide_colorbar(title = "Count", 
                                 barwidth = 1, barheight = 15))
 ```
 
@@ -840,7 +840,7 @@ These can be a bit confusing to read / interpret
 
 <hr>
 
-The legend provides us with an estimate of the proportion of data points fall within a colored region. The density of the distribution of points sums to 1. 
+The legend provides us with an estimate of the proportion of data points that fall within a colored region. The density of the distribution of points sums to 1. 
 
 ```{r}
 #| eval: true
