fixed typo in HW #1, broken link in week3-solution (discussion), typo in week4 discussion slides theme map

--- a/course-materials/discussion/week3/week3-solution.qmd
+++ b/course-materials/discussion/week3/week3-solution.qmd
@@ -7,7 +7,7 @@ description: "Tuesday January 21^st^, 2025"
 ::: {.callout-note}
 ## Your answers might look a bit different! Discuss with your own answers with one another.
 
-While you should generally follow the [alt text formula](week3-alt-text-slides.qmd#alt-text-formula){target="_blank"}, your final answers may look a bit different than those listed here.
+While you should generally follow the [alt text formula](week3-slides.qmd#alt-text-formula){target="_blank"}, your final answers may look a bit different than those listed here.
 :::
 
 ## Example 1: `{palmerpenguins}` ggplot
