--- a/course-materials/assignments/HW1.qmd
+++ b/course-materials/assignments/HW1.qmd
@@ -95,11 +95,11 @@ Modified viz, by Sam Shanny-Csik (refactored code, see below)
 
 ### 1b. Answer questions {#hw1-p1b}
 
-Once you're done annotating, respond to the following three questions about this data visualization: 
+Once you're done annotating, respond to the following questions about this data visualization: 
 
 - [ ] **1.** Consider the order of `geom_*()` layers in the US map plot (`plot_us`). Why did the original creator order the layers in this way?
 - [ ] **2.** During week 2, we discuss [Choosing the right graphic form](https://eds-240-data-viz.github.io/course-materials/lecture-slides/lecture2.1-choosing-graphic-forms-slides.html#/title-slide). Refer to this lecture when answering the sub-questions, below:
-    - [ ] **a.** What "perceptual tasks" (from Cleveland & McGill's heirarchy) must the viewer perform to extract information from these visualizations?
+    - [ ] **a.** What "perceptual tasks" (from Cleveland & McGill's hierarchy) must the viewer perform to extract information from these visualizations?
     - [ ] **b.** What task(s) do you think the author wanted to enable or message(s) he wanted to convey with these visualizations (see lecture 2.1, slide 16 for examples)? Be sure to note at least one task / message for each of the three data viz.
     - [ ] **c.** Name at least one caveat to the "hierarchy of perceptual tasks" that the author employed to achieve a goal(s) you noted in question b?
 - [ ] **3.** Describe two elements of this piece that you find visually-pleasing / easy to understand / intuitive. Why? 
